--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hardhat": "^2.22.15"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.1.0"
+    "@openzeppelin/contracts": "^5.1.0",
+    "readline-sync": "^1.4.10"
   }
 }
